<resources>
    <string name="app_name" translatable="false">Secure Connect</string>
    <string name="app_website" translatable="false">https://www.mctwireless.com</string>
    <string name="app_ddns" translatable="false">ddns.sc.mctwireless.com</string>
    <string name="app_ddns_port" translatable="false">53</string>
    <string name="app_license" translatable="false">GPL-3.0-or-later</string>
    <string name="app_description">Allow voice and video communication without any server or Internet access. Simply scan each others contact QR-Code and call each other. This works on most networks, e.g. at home, in community networks or at work.</string>
    <string name="action_settings">Settings</string>
    <string name="name_prompt">What should be your name?</string>
    <string name="scan_invitation">Scan This QR-Code</string>
    <string name="scan_invited">QR-Code Scanning</string>
    <string name="paste_invitation">Paste Contact Data Here</string>
    <string name="invalid_data">Invalid data</string>
    <string name="cancel">Cancel</string>
    <string name="next">next</string>
    <string name="setup_address_title">Setup Network Address</string>
    <string name="setup_address_message">No WiFi card found. Enable WiFi now (no Internet needed) or skip to configure later.</string>
    <string name="enter_password">Enter password</string>
    <string name="path_title">Import/Export Path</string>
    <string name="import_dialog">Import new settings and add %1$d contacts and %2$d events?</string>
    <string name="password_title">Password</string>
    <string name="missing_camera_permissions">Missing permission. Camera disabled.</string>
    <string name="missing_microphone_permissions">Missing permission. Microphone disabled.</string>
    <string name="camera_permission_request">Camera permission needed to scan codes</string>
    <string name="invalid_qr">Invalid QR-Code</string>
    <string name="network_connect_invitation">No information available, please connect to a network</string>
    <string name="contact_has_no_address_warning">Warning: Contact has no address</string>
    <string name="setup_address">Setup Address</string>
    <string name="setup_no_address_found">No address of your WiFi card found. Enable WiFi now (no Internet needed) or skip to configure later.</string>
    <string name="contact_with_name_already_exists">A contact with that name already exists.</string>
    <string name="warning_no_addresses_configured">No address for QR code configured.</string>
    <string name="warning_no_addresses_found">Configured addresses not found. Did the network change?</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_license">License</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_about">About</string>
    <string name="menu_share">User Share</string>
    <string name="menu_vpn">VPN</string>
    <string name="menu_exit">Exit</string>
    <string name="user">User</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="settings">Settings</string>
    <string name="settings_name">Name</string>
    <string name="settings_change_name">Change Name</string>
    <string name="settings_addresses">Addresses</string>
    <string name="settings_password">Password</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_use_neighbor_table">Use Neighbor Table (ARP/ND)</string>
    <string name="settings_nightmode">Night Mode</string>
    <string name="settings_block_unknown">Block Unknown Callers</string>
    <string name="settings_ignore_battery_optimizations">Ignore Battery Optimizations</string>
    <string name="settings_settings_mode">Settings Mode</string>
    <string name="settings_prompt_outgoing_calls">Prompt Outgoing Calls</string>
    <string name="settings_connect_timeout">Connect Timeout (ms)</string>
    <string name="settings_video_hardware_acceleration">Video Hardware Acceleration</string>
    <string name="settings_no_audio_processing">No Audio Processing</string>
    <string name="settings_public_key">Public Key</string>
    <string name="read_only">Read Only</string>
    <string name="none">None</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="replace">Replace</string>
    <string name="ping">Ping</string>
    <string name="pick">Pick</string>
    <string name="qrcode">QR-Code</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="contact_edit">Edit Contact</string>
    <string name="contact_exists">Contact Exists</string>
    <string name="permission_mic">Microphone permission needed to make calls</string>
    <string name="hello">Hello!</string>
    <string name="empty_list_item">Empty</string>
    <string name="database_wrong_password">Wrong database password</string>
    <string name="failed_to_export_database">Failed to export database</string>
    <string name="call_connecting">Calling...</string>
    <string name="call_connected">Connected</string>
    <string name="call_dismissed">Dismissed</string>
    <string name="call_denied">Declined</string>
    <string name="call_waiting">Waiting...</string>
    <string name="call_ringing">Ringing...</string>
    <string name="call_connection_failed">Connection Failed</string>
    <string name="call_authentication_failed">Authentication Failed</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_error">Error</string>
    <string name="call_start_or_abort">Start or Abort Call</string>
    <string name="button_select">Select</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>
    <string name="button_abort">Abort</string>
    <string name="button_reset">Reset</string>
    <string name="button_rename">Rename</string>
    <string name="button_replace">Replace</string>
    <string name="button_save">Save</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Remove</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_events">Events</string>
    <string name="title_history">History</string>
    <string name="about_app_version">Version:</string>
    <string name="about_app_description">Description:</string>
    <string name="about_app_website">Website:</string>
    <string name="about_app_license">License:</string>
    <string name="address_management">Address Management</string>
    <string name="custom_address">CUSTOM ADDRESS</string>
    <string name="currently_active">Currently Active</string>
    <string name="address_management_help_text">Select one address or more that will be included in your QR-Code. A good idea is to use the MAC address of the WiFi adapter (wlan0). But be aware that Android might change it depending on the system settings. If no MAC address is visible, then enable your WiFi.</string>
    <string name="listen_for_incoming_calls">Listen for incoming calls.</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="no_path_selected">No path selected</string>
    <string name="file_already_exists">File already exists</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_timeout">Invalid Timeout</string>
    <string name="no_file_name">No file name</string>
    <string name="contact_already_exists">Contact already exists</string>
    <string name="enter_contact_name">Enter contact name.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="contact_name_conflict">A contact with the same name exists:</string>
    <string name="contact_key_conflict">A contact with the same key exists:</string>
    <string name="contact_name_empty">Contact name is empty.</string>
    <string name="contact_name_exists">A contact with that name exists already:</string>
    <string name="contact_remove">Remove contact? %1$s</string>
    <string name="connected_to_address">(to %1$s)</string>
    <string name="connecting_to_address">Connecting to %1$s</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="skip">Skip</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="overlay_permission_missing">Overlay permission missing. Won\'t be able to receive calls while in background!</string>
    <string name="call_error_not_listening">Error: no app running</string>
    <string name="call_error_no_address">Error: no address</string>
    <string name="call_error_unresolved_hostname">Error: cannot resolve address</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="capture_format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="capture_format_muted">Muted</string>
</resources>
