<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>

    <item
        android:id="@+id/action_backup"
        app:showAsAction="never"
        android:title="@string/menu_backup"/>

    <item
        android:id="@+id/action_about"
        app:showAsAction="never"
        android:title="@string/menu_about"/>

    <item
        android:id="@+id/action_usershare"
        app:showAsAction="never"
        android:title="@string/menu_share"/>

    <item
        android:id="@+id/action_vpn"
        app:showAsAction="never"
        android:title="@string/menu_vpn"/>

    <item
        android:id="@+id/action_exit"
        app:showAsAction="never"
        android:title="@string/menu_exit"/>
</menu>
